crates/plotnik-tests/tests/02-parser/recovery_unexpected/garbage_inside_node.txt
Q = (a (b) @@@ (c))
Z = (d)
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:12
  |
1 | Q = (a (b) @@@ (c))
  |            ^^^
